Release Notes

HEAD, planned as v0.26
- Improved the gui to modify the k-map layout.
- Improved the layout of fsm transitions in the fsm editor.
- Added French translation. Special thanks to Nicolas Maltais who
  provided the translation.
- Fixed a bug in the Demuxer Verilog template that causes problems
  when using multiple demuxers in the same circuit.
- Generic circuits are easier to debug: It is possible now to create
  a specific, concrete circuit from a generic one.
- Fixed a bug in the value editor, which occurs, if high-z is the
  default value of an input.
- Fixed an issue which avoids to restart a running simulation by just
  click on the start button again.
- If IEEE shapes are selected in the settings, also the CircuitBuilder
  uses wide shapes in the created circuits.
- Added IC 74190 to the Library.

v0.25, released on 10. Aug. 2020
- Color schemes have been added to support color-blind users.
- Unipolar and bipolar stepper motors were added.
- Moved the "lib" folder from the "examples" folder to the root folder.
  - In case you have added your own library circuits, you have to move
    them manually as well.
- Reordering of the cells in the K-Map.
- Counters are able to act as program counters via the remote interface.
- The circuits created have a more visible separation of the inputs.
- The hex seven seg display is switched off in case of a high-z input.
- A Stop component was added.
- Improved test case parser. Now the test case is able to react on the
  circuit's state.
- 7482, 74193 and 744017 were added
- Breaking changes:
  - The layout shape uses a slightly different algorithm to determine
    the pin positions. You may need to adjust usages of embedded circuits
    that use the layout shape.
  - The CommandLineTester has moved! Tests are now executed like this:
    java -cp Digital.jar CLI test [file to test]
       [-tests [optional file with test cases]]
  - Text formatting was reworked. Disable formatting with a '\' in the